# mozanalysis

./: .buildinfo  .gitignore  CHANGELOG.rst  Dockerfile  README.md  about.html  api.html  genindex.html  guide.html  index.html  makefile  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: build.yml  tagged-deploy.yml
_modules/: index.html
_modules/mozanalysis/: bayesian_stats.html  bq.html  config.html  experiment.html  exposure.html  metrics.html  segments.html  sizing.html  stats.html  udf.html
_modules/mozanalysis/bayesian_stats/: bayesian_bootstrap.html  binary.html  survival_func.html
_modules/mozanalysis/frequentist_stats/: bootstrap.html  sample_size.html
_sources/: guide.rst.txt
_sources/api/: bayesian_stats.rst.txt  experiment.rst.txt  metrics.rst.txt  udf.rst.txt
_sources/api/frequentist_stats/: bootstrap.rst.txt  sample_size.rst.txt
_sources/api/segments/: desktop.rst.txt
api/: bayesian_stats.html  bq.html  config.html  experiment.html  exposure.html  metrics.html  segments.html  sizing.html  stats.html  udf.html
api/bayesian_stats/: bayesian_bootstrap.html  binary.html  survival_func.html
api/frequentist_stats/: bootstrap.html  sample_size.html
api/metrics/: desktop.html  fenix.html  firefox_ios.html  firetv.html
api/segments/: desktop.html
docs/: about.rst  conf.py  guide.rst  index.rst  requirements.txt
docs/_ext/: metrics_docstrings.py
docs/adrs/: adr-0001-dependency_management.md
docs/api/: bq.rst  config.rst  exposure.rst  segments.rst  sizing.rst  stats.rst
docs/api/bayesian_stats/: bayesian_bootstrap.rst  binary.rst  survival_func.rst
docs/api/frequentist_stats/: sample_size.rst
docs/api/metrics/: desktop.rst  fenix.rst  firefox_ios.rst  firetv.rst
docs/api/segments/: desktop.rst
docs/api/stats/: bayesian_binary.rst  bootstrap.rst  summarize_samples.rst  survival_func_bb.rst
script/: update_deps
src/mozanalysis/: __init__.py  bootstrap.py  bq.py  bq_util.py  cli.py  config.py  experiment.py  experiments.py  exposure.py  inflight.py  metrics.py  segments.py  sizing.py  stats.py  types.py  udf.py  utils.py
src/mozanalysis/bayesian_stats/: __init__.py  bayesian_bootstrap.py  binary.py  survival_func.py
src/mozanalysis/contrib/bmiroglio/: search_ads.py
src/mozanalysis/contrib/flawrence/: mobile.py
src/mozanalysis/contrib/flawrence/abtest_stats/: __init__.py  beta.py  bootstrap.py
src/mozanalysis/frequentist_stats/: NormalOLS.py  __init__.py  bootstrap.py  linear_models.py  sample_size.py
src/mozanalysis/frequentist_stats/linear_models/: __init__.py  classes.py  functions.py
src/mozanalysis/historical_targets/: __init__.py  desktop.py
src/mozanalysis/metrics/: __init__.py  desktop.py  fenix.py  firefox_ios.py  firetv.py  focus_android.py  focus_ios.py  klar_android.py  klar_ios.py
src/mozanalysis/segments/: __init__.py  desktop.py
src/mozanalysis/stats/: __init__.py  bayesian_binary.py  bayesian_bootstrap.py  bootstrap.py  summarize_samples.py  survival_func_bb.py
src/mozanalysis/visualization/: PlotType.py  StatisticsData.py  deciles.py  experimenter_api.py  plotters.py  preamble.py  types.py
src/mozanalysis/visualization/statistics/: __init__.py  binomial.py  count.py  deciles.py  empirical_cdf.py  mean.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_config.py  test_experiment.py  test_experiments.py  test_metric_libraries.py  test_metrics.py  test_segment_libraries.py  test_sizing.py  test_stats.py  test_udf.py  test_utils.py
tests/bayesian_stats/: test_bayesian_bootstrap.py  test_binary.py  test_consistency.py  test_init.py  test_survival_func.py
tests/frequentist_stats/: helpers.py  test_bootstrap.py  test_linear_model_classes.py  test_linear_model_functions.py  test_linear_models.py  test_sample_size_calc.py
tests/helpers/: cheap_lint.py  config_loader_lists.py
tests/stats/: test_bayesian_binary.py  test_bayesian_bootstrap.py  test_bootstrap.py  test_consistency.py  test_summarize_samples.py  test_survival_func_bb.py
